--- a/angular.json
+++ b/angular.json
@@ -18,16 +18,19 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
-            ],
-            "scripts": []
+              "assets": [
+                  "src/favicon.ico",
+                  "src/assets",
+                  "src/manifest.webmanifest"
+              ],
+              "styles": [
+                  "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                  "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+                  "src/styles.css"
+              ],
+              "scripts": [],
+              "serviceWorker": true,
+              "ngswConfigPath": "ngsw-config.json"
           },
           "configurations": {
             "production": {
@@ -88,8 +91,9 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+                "src/favicon.ico",
+                "src/assets",
+                "src/manifest.webmanifest"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
